[package]
name = "triponics-rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.3"
futures = "0.3.30"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["time", "signal"] }
macros = { path = "./macros" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
error-stack = "0.5.0"
