[package]
name = "triponics-rpi"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-broker = "0.4.3"
futures = "0.3.30"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["time", "signal"] }
macros = { path = "./macros" }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [
    "env-filter",
    "local-time",
    "time",
] }
error-stack = "0.5.0"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
paho-mqtt = { version = "0.12.5", features = ["vendored-ssl"] }
time = { version = "0.3.36", features = ["macros"] }
anyhow = "1.0.86"
